# electropysiology

./: .gitignore  README.md  pyproject.toml
electropysiology/: __init__.py  recording.py  signal.py  spectrum.py
electropysiology/signals/: __init__.py  lfp.py
epych/: __init__.py  plotting.py  recording.py  signal.py  spectrum.py  statistic.py
epych/signals/: __init__.py  lfp.py  tfr.py
epych/statistics/: __init__.py  alignment.py  grand.py  spectrum.py
notebooks/: passiveglo_aligned_eyeballs.ipynb  passiveglo_aligned_grand4minus3.ipynb  passiveglo_aligned_grand_cluster_ttest.ipynb  passiveglo_aligned_grandavg.ipynb  passiveglo_aligned_grandavg_eyeballs.ipynb  passiveglo_aligned_grandcat.ipynb  passiveglo_aligned_grandttest.ipynb  passiveglo_alignment.ipynb  passiveglo_averages.ipynb  passiveglo_epoching.ipynb  passiveglo_eyeballs.ipynb  passiveglo_lonaive.ipynb
notebooks/examples/: lab_assignment.ipynb
notebooks/passiveglo/: aligned_grand4minus3.ipynb  aligned_grand4minus3_csds.ipynb  aligned_grand_cluster_ttest.ipynb  aligned_grand_nonparametric_strong_plots.ipynb  aligned_grand_nonparametric_weak.ipynb  aligned_hippocampal_grandcat.ipynb  animal_psds.ipynb  epoching.ipynb  gonaive_epoching.ipynb  grand_hippocampal_spectrogram.ipynb  grand_hippocampal_spectrogram_nonparametric.ipynb  grand_hippocampal_spectrogram_nonparametric4-3.ipynb  grand_oddball_fooof.ipynb  grand_oddball_spectra.ipynb  grand_spectrogram.ipynb  grand_spectrogram_eyeballs.ipynb  grand_spectrogram_nonparametric.ipynb  grand_spectrogram_nonparametric4-3.ipynb  (+11 more)
oscillapy/: spectrum.py
(+7 files in other folders)
