[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "electropysiology"
version = "0.0.1"
authors = [
  { name="Eli Sennesh", email="eli.sennesh@vanderbilt.edu" },
]
description = "Electrophysiology basics in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BastosLab/electropysiology"
"Bug Tracker" = "https://github.com/BastosLab/electropysiology/issues"
