[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oscillapy"
version = "0.0.1"
authors = [
  { name="Eli Sennesh", email="eli.sennesh@vanderbilt.edu" },
]
dependencies = ["matplotlib", "numpy", "pandas", "scipy", "seaborn"]
description = "Oscillatory electrophysiology basics in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BastosLab/oscillapy"
"Bug Tracker" = "https://github.com/BastosLab/oscillapy/issues"

[tool.setuptools]
packages = ["oscillapy"]
